--- a/programming.html
+++ b/programming.html
@@ -42,6 +42,13 @@
         </main>
     </div>
 
+    <footer class="footer">
+        <img src="Assets/Bottom.gif" alt="" class="bottom-decoration">
+        <div class="footer-content">
+            <p>© <script>document.write(new Date().getFullYear())</script> Bronymiau. All rights reserved.</p>
+        </div>
+    </footer>
+
     <div class="theme-switcher">
         <button class="theme-button theme-pink" data-theme="pink"></button>
         <button class="theme-button theme-blue" data-theme="blue"></button>
