--- a/programming.html
+++ b/programming.html
@@ -39,6 +39,27 @@
         <img src="Assets/Pinkie.png" alt="" class="pinkie-decoration">
 
         <main class="content">
+            <div class="programming-container">
+                <h1 class="section-title" data-translate="myProjects">Мои проекты</h1>
+                
+                <div class="project-showcase">
+                    <div class="project-image-wrapper">
+                        <img src="Assets/Equesta.png" alt="EquestraFX" class="project-image">
+                    </div>
+                    <div class="project-card">
+                        <div class="project-info">
+                            <h3 class="project-title">
+                                <span class="title-effect">EquestraFX</span>
+                            </h3>
+                            <p class="project-description" data-translate="equestraDesc"></p>
+                            <div class="project-status" data-translate="inDevelopment"></div>
+                            <div class="project-links">
+                                <button class="project-link disabled" data-translate="download" disabled></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
     </div>
 
