--- a/drearth.html
+++ b/drearth.html
@@ -74,7 +74,7 @@
                         <h4 data-translate="gameplayFeatures">Особенности игрового процесса</h4>
                         <ul>
                             <li data-translate="feature1">Уникальная боевая система, сочетающая магические способности и тактическое планирование</li>
-                            <li data-translate="feature2">Головоломки, основанные на взаимодействии двух персонажей и их уникальных способностях</li>
+                            <li data-translate="feature2">Головоломки, основанные на взаимодействии двух персонажей и их уникальных способностей</li>
                             <li data-translate="feature3">Динамическое окружение, меняющееся в зависимости от психического состояния главной героини</li>
                             <li data-translate="feature4">Система отношений между персонажами, влияющая на развитие сюжета</li>
                         </ul>
