--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
             --timer-color: #FFD700;
         }
 
+        .countdown-row {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 0.5rem;
+        }
+
         .countdown-row span[id] {
             font-size: 2.5rem;
             font-weight: bold;
@@ -47,6 +54,11 @@
             min-width: 60px;
             text-align: center;
             text-shadow: 0 0 15px rgba(var(--timer-color), 0.6);
+        }
+
+        .time-label {
+            font-size: 1rem;
+            white-space: nowrap;
         }
 
         .separator {
@@ -63,6 +75,77 @@
 
         .birthday-block h3 {
             text-shadow: 0 0 10px rgba(var(--timer-color), 0.5);
+        }
+
+        @media screen and (max-width: 768px) {
+            .countdown-row {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 0.3rem;
+            }
+
+            .countdown-row span[id] {
+                font-size: 1.8rem;
+                min-width: 30px;
+            }
+
+            .time-label {
+                font-size: 0.7rem;
+            }
+
+            .separator {
+                font-size: 1.2rem;
+                margin: 0 0.2rem;
+            }
+
+            .birthday-block {
+                padding: 1rem;
+            }
+        }
+
+        @media screen and (max-width: 480px) {
+            .countdown-row {
+                gap: 0.2rem;
+            }
+
+            .countdown-row span[id] {
+                font-size: 1.4rem;
+                min-width: 25px;
+            }
+
+            .time-label {
+                font-size: 0.6rem;
+            }
+
+            .separator {
+                font-size: 1rem;
+                margin: 0 0.1rem;
+            }
+        }
+
+        @media screen and (max-width: 360px) {
+            .countdown-row {
+                gap: 0.1rem;
+            }
+
+            .countdown-row span[id] {
+                font-size: 1.2rem;
+                min-width: 20px;
+            }
+
+            .time-label {
+                font-size: 0.5rem;
+            }
+
+            .separator {
+                font-size: 0.8rem;
+                margin: 0;
+            }
+
+            .birthday-block {
+                padding: 0.75rem;
+            }
         }
     </style>
 </head>
