--- a/art.html
+++ b/art.html
@@ -134,6 +134,56 @@
                         <a href="https://x.com/Bronymiau" class="social-link">Twitter</a>
                     </div>
                 </div>
+                <div class="content-block reviews-block">
+                    <h2 data-translate="reviews">Отзывы</h2>
+                    <div class="reviews-container">
+                        <div class="review-card">
+                            <div class="review-header">
+                                <img src="Assets/ComissionsPfp/DinTroubleMaker.png" alt="DinTroubleMaker" class="reviewer-avatar">
+                                <div class="reviewer-info">
+                                    <div class="reviewer-name">DinTroubleMaker</div>
+                                </div>
+                                <div class="rating-with-stars">
+                                    <div class="overall-rating">8.7</div>
+                                    <div class="stars-container">
+                                        <div class="star filled">
+                                            <img src="Assets/star.svg" alt="star">
+                                        </div>
+                                        <div class="star filled">
+                                            <img src="Assets/star.svg" alt="star">
+                                        </div>
+                                        <div class="star filled">
+                                            <img src="Assets/star.svg" alt="star">
+                                        </div>
+                                        <div class="star filled">
+                                            <img src="Assets/star.svg" alt="star">
+                                        </div>
+                                        <div class="star partial">
+                                            <img src="Assets/star.svg" alt="star">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="review-ratings">
+                                <div class="rating-item">
+                                    <span data-translate="quality">Качество:</span>
+                                    <span>4/5</span>
+                                </div>
+                                <div class="rating-item">
+                                    <span data-translate="price">Цена:</span>
+                                    <span>4/5</span>
+                                </div>
+                                <div class="rating-item">
+                                    <span data-translate="timeframe">Срок:</span>
+                                    <span>5/5</span>
+                                </div>
+                            </div>
+                            <div class="review-text" data-translate="dinTroubleMakerReview">
+                                "Ну, особо и сказать нечего, мне лично нравится, но как мне кажется морда немного по-другому должна была выглядеть"
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
 
