--- a/programming.html
+++ b/programming.html
@@ -49,6 +49,42 @@
 
         <main class="content">
             <div class="programming-container">
+                <div class="content-block price-list">
+                    <h2 data-translate="priceList">Прайс лист</h2>
+                    
+                    <h3 data-translate="discordBots">Дискорд боты</h3>
+                    <div class="price-item">
+                        <span data-translate="simpleUtilities">Простые утилиты без БД</span>
+                        <span data-price="10" data-price-ru="500">₽500</span>
+                    </div>
+                    <div class="price-item">
+                        <span data-translate="moderation">Модерация</span>
+                        <span data-price="25" data-price-ru="1500">₽1500</span>
+                    </div>
+                    <div class="price-item">
+                        <span data-translate="economy">Экономика</span>
+                        <span data-price="35" data-price-ru="3000">₽3000</span>
+                    </div>
+                    <div class="price-item">
+                        <span data-translate="events">Ивенты</span>
+                        <span data-price="40" data-price-ru="3500">₽3500</span>
+                    </div>
+                    <div class="price-item">
+                        <span data-translate="other">Прочее</span>
+                        <span><span data-translate="upTo">До</span> </span><span data-price="100" data-price-ru="5000">₽5000</span>
+                    </div>
+
+                    <h3 data-translate="frontendWebsites">Фронтенд сайты</h3>
+                    <div class="price-item">
+                        <span data-translate="simple">Простой</span>
+                        <span data-price="30" data-price-ru="2000">₽2000</span>
+                    </div>
+                    <div class="price-item">
+                        <span data-translate="complex">Сложнее</span>
+                        <span data-price="60" data-price-ru="4000">₽4000</span>
+                    </div>
+                </div>
+
                 <h1 class="section-title" data-translate="myProjects">Мои проекты</h1>
                 
                 <div class="project-showcase">
