--- a/art.html
+++ b/art.html
@@ -36,6 +36,12 @@
             </div>
         </div>
     </div>
+    <div class="notice-banner">
+        <div class="notice-content">
+            <img src="Assets/Delirium/delirium.png" alt="Delirium" class="notice-image">
+            <p class="notice-text" data-translate="warNotice"></p>
+        </div>
+    </div>
     <div class="page-container">
         <div class="center-nav">
             <nav class="navbar">
