--- a/drearth.html
+++ b/drearth.html
@@ -23,6 +23,12 @@
     </script>
 </head>
 <body>
+    <div class="notice-banner">
+        <div class="notice-content">
+            <img src="Assets/Delirium/delirium.png" alt="Delirium" class="notice-image">
+            <p class="notice-text" data-translate="warNotice"></p>
+        </div>
+    </div>
     <div class="page-container">
         <div class="center-nav">
             <nav class="navbar">
@@ -87,7 +93,7 @@
                         <a href="https://www.paypal.me/TaroTarrochkaa" class="donate-button" target="_blank" data-translate="supportProject">
                             Поддержать проект
                         </a>
-                    
+                    Д
                             </div>
                         </div>
                     </div>
