--- a/index.html
+++ b/index.html
@@ -150,6 +150,12 @@
     </style>
 </head>
 <body>
+    <div class="notice-banner">
+        <div class="notice-content">
+            <img src="Assets/Delirium/delirium.png" alt="Delirium" class="notice-image">
+            <p class="notice-text" data-translate="warNotice"></p>
+        </div>
+    </div>
     <div class="page-container">
         <div class="center-nav">
             <nav class="navbar">
