--- a/about.html
+++ b/about.html
@@ -23,6 +23,12 @@
     </script>
 </head>
 <body>
+    <div class="notice-banner">
+        <div class="notice-content">
+            <img src="Assets/Delirium/delirium.png" alt="Delirium" class="notice-image">
+            <p class="notice-text" data-translate="warNotice"></p>
+        </div>
+    </div>
     <div class="page-container">
         <div class="center-nav">
             <nav class="navbar">
