--- a/programming.html
+++ b/programming.html
@@ -23,7 +23,14 @@
     </script>
 </head>
 <body>
+    <div class="notice-banner">
+        <div class="notice-content">
+            <img src="Assets/Delirium/delirium.png" alt="Delirium" class="notice-image">
+            <p class="notice-text" data-translate="warNotice"></p>
+        </div>
+    </div>
     <div class="page-container">
+        
         <div class="center-nav">
             <nav class="navbar">
                 <a href="index.html" class="nav-item">
