--- a/about.html
+++ b/about.html
@@ -32,19 +32,19 @@
     <div class="page-container">
         <div class="center-nav">
             <nav class="navbar">
-                <a href="index.html" class="nav-item">
+                <a href="index" class="nav-item">
                     <div class="nav-oval" data-translate="main">Main</div>
                 </a>
-                <a href="about.html" class="nav-item active">
+                <a href="about" class="nav-item active">
                     <div class="nav-oval" data-translate="interests">Interests</div>
                 </a>
-                <a href="art.html" class="nav-item">
+                <a href="art" class="nav-item">
                     <div class="nav-oval" data-translate="artist">Artist</div>
                 </a>
-                <a href="programming.html" class="nav-item">
+                <a href="programming" class="nav-item">
                     <div class="nav-oval" data-translate="programming">Programming</div>
                 </a>
-                <a href="drearth.html" class="nav-item">
+                <a href="drearth" class="nav-item">
                     <div class="nav-oval">Drearth</div>
                 </a>
             </nav>
